only save files left