@@ -1,9 +1,8 @@
 package edu.austral.dissis.starships;
 
 import edu.austral.dissis.starships.config.Config;
-import edu.austral.dissis.starships.controller.GameController;
 import edu.austral.dissis.starships.controller.GameObjectController;
-import edu.austral.dissis.starships.controller.ShipController;
+import edu.austral.dissis.starships.dataStructure.ShipModelViewTuple;
 import edu.austral.dissis.starships.file.ImageLoader;
 import edu.austral.dissis.starships.game.*;
 import edu.austral.dissis.starships.model.Ship;
@@ -11,11 +10,14 @@ import edu.austral.dissis.starships.model.SpaceShipButton;
 import edu.austral.dissis.starships.dataStructure.DimensionTuple;
 import edu.austral.dissis.starships.dataStructure.Vector2;
 import edu.austral.dissis.starships.player.Player;
-import javafx.event.ActionEvent;
-import javafx.event.EventHandler;
+import edu.austral.dissis.starships.view.ShipView;
 import javafx.scene.Parent;
+import javafx.scene.control.Label;
 import javafx.scene.input.KeyCode;
 import javafx.scene.layout.*;
+import javafx.scene.paint.Color;
+import javafx.scene.text.Font;
+import javafx.scene.text.Text;
 import org.jetbrains.annotations.NotNull;
 
 import java.io.IOException;
@@ -58,90 +60,112 @@ class GameManager {
     private Parent loadMenu() throws IOException {
         ImageLoader imageLoader = new ImageLoader();
         Pane pane = new Pane();
+
         pane.setPrefSize(1920, 1080);
         BackgroundImage backgroundImage= new BackgroundImage(imageLoader.loadFromResources("background.jpg", 1920, 1080),
                 BackgroundRepeat.REPEAT, BackgroundRepeat.NO_REPEAT, BackgroundPosition.DEFAULT,
                 BackgroundSize.DEFAULT);
         pane.setBackground(new Background(backgroundImage));
-        SpaceShipButton startButton = new SpaceShipButton("Start Game!",960,540);
-        pane.getChildren().add(startButton);
-        startButton.setOnAction(new EventHandler<ActionEvent>() {
-            @Override
-            public void handle(ActionEvent event) {
-                isMenu = !isMenu;
-                try {
-                    rootSetter.setRoot(init());
-                } catch (IOException e) {
-                    e.printStackTrace();
-                }
+
+        Text t = new Text();
+        t.setText("Starships!");
+        t.setFont(Font.font ("Verdana", 100));
+        t.setFill(Color.BLUEVIOLET);
+        t.setLayoutX(750);
+        t.setLayoutY(200);
+        pane.getChildren().add(t);
+
+        SpaceShipButton startButton = new SpaceShipButton("New Game!",900,540, event -> {
+            isMenu = !isMenu;
+            try {
+                rootSetter.setRoot(init());
+            } catch (IOException e) {
+                e.printStackTrace();
             }
         });
+        SpaceShipButton loadGameButton = new SpaceShipButton("Load Game!",900,630, event -> {
 
+        });
+        SpaceShipButton exitButton = new SpaceShipButton("Exit",900,720, event -> { System.exit(0);});
+
+        pane.getChildren().add(startButton);
+        pane.getChildren().add(loadGameButton);
+        pane.getChildren().add(exitButton);
         return pane;
     }
 
     private Parent loadGame() throws IOException {
         ImageLoader imageLoader = new ImageLoader();
         Pane pane = new Pane();
-//        load();
-
-        ShipController shipController = new ShipController(
-                new Ship(new Vector2(900,500),new Vector2(0,-1),200,new DimensionTuple(85,85))
-        );
-//        BulletController bulletController = new BulletController();
-//
-//        AsteroidsController asteroidsController = new AsteroidsController();
         GameObjectController gameObjectController = new GameObjectController();
+        load(gameObjectController);
+
+
         BackgroundImage backgroundImage= new BackgroundImage(imageLoader.loadFromResources("background.jpg", 1920, 1080),
                 BackgroundRepeat.REPEAT, BackgroundRepeat.NO_REPEAT, BackgroundPosition.DEFAULT,
                 BackgroundSize.DEFAULT);
         pane.setBackground(new Background(backgroundImage));
-
-        pane.getChildren().add(shipController.getShipView().getImageView());
-//        pane.getChildren().add(players.get(0).getShipController().getShipView().getImageView());
-        mainTimer = new MainTimer(pane,shipController,gameObjectController, context.getKeyTracker());
-//        mainTimer = new MainTimer(pane,players.get(0).getShipController(),bulletController, asteroidsController, context.getKeyTracker());
+        pane.getChildren().add(gameObjectController.getFirst().getView().getImageView());
+        pane.getChildren().add(gameObjectController.getSecond().getView().getImageView());
+        mainTimer = new MainTimer(pane,gameObjectController, context.getKeyTracker(),players);
         mainTimer.start();
         return pane;
-
     }
-    public void load() {
+
+    public void load(GameObjectController gameObjectController) throws IOException {
         List<Map<String, String>> gameConfiguration = Config.getGameConfiguration();
         for (int i = 0; i < gameConfiguration.size(); i++) {
             Map<String, String> playerConfiguration = gameConfiguration.get(i);
             Player player = new Player(playerConfiguration);
             players.add(player);
+            Ship shipModel = new Ship(new Vector2(900 - i*200,500),new Vector2(0,-1),200,new DimensionTuple(85,85),player);
+                ShipView shipView = new ShipView(shipModel.getPosition().getX(),shipModel.getPosition().getY(),shipModel.getDirection().getAngle()*180/Math.PI + 90,
+                        shipModel.getDimension().getWidth(),shipModel.getDimension().getHeight(),gameConfiguration.get(i).get("spaceShipImagePath"));
+            ShipModelViewTuple shipModelViewTuple = new ShipModelViewTuple(shipModel,shipView);
+            gameObjectController.add(shipModelViewTuple);
         }
-
     }
 }
 
  class MainTimer extends GameTimer {
 
-    GameController gameController;
+    edu.austral.dissis.starships.controller.GameManager gameController;
     KeyTracker keyTracker;
+    ArrayList<Player> players;
+     VBox scoreLabels;
     boolean isPaused = false;
-     public MainTimer(Pane pane, ShipController shipController, GameObjectController gameObjectController, KeyTracker keyTracker) {
-        gameController = new GameController(pane, shipController, gameObjectController);
+     public MainTimer(Pane pane, GameObjectController gameObjectController, KeyTracker keyTracker,ArrayList<Player> players) {
+        gameController = new edu.austral.dissis.starships.controller.GameManager(pane, gameObjectController);
         this.keyTracker = keyTracker;
+        this.players = players;
+        scoreLabels = new VBox();
+        pane.getChildren().add(scoreLabels);
      }
 
     @Override
     public void nextFrame(double secondsSinceLastFrame) {
-
-        if (gameController.isOver()){
-            stop();
+        scoreLabels.getChildren().clear();
+        for (Player player : players) {
+            Label label = new Label();
+            label.setText("Score: " + player.getScore() + ". Lives: " + player.getCurrentLives());
+            label.setFont(new Font(30));
+            label.setTextFill(Color.WHITE);
+            scoreLabels.getChildren().add(label);
         }
+//        if (gameController.isOver()){
+//            stop();
+//        }
         if (keyTracker.getKeySet().contains(KeyCode.P)){
             isPaused = !isPaused;
-            if (keyTracker.getKeySet().contains(KeyCode.S)){
-
+            if (keyTracker.getKeySet().contains(KeyCode.V)){
+                System.out.println("QUEEEE");
             }
             keyTracker.getKeySet().remove(KeyCode.P);
         }
         if (!isPaused) {
             gameController.update(secondsSinceLastFrame, keyTracker);
+        }else if (keyTracker.getKeySet().contains(KeyCode.V)) {
+            System.out.println("QUEEEE");
         }
-    }
-
- }
+     }
+}
